--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,35 @@
   font: 1em Roboto, sans-serif;
 }
 
-#board {
-  background-color: #1e1e1e;
+.app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 98vh;
+  background: radial-gradient(circle at center, #000000 50%, #ffffff 200%);
+}
+
+.game-selector {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.game-selector-button {
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #333;
+  color: #fff;  
+}
+
+.game-selector-button:hover {
+  background-color: #444;
+  font-size: 2rem;
+  transition: background-color 0.3s ease;
+  transition: font-size 0.3s ease;
 }
