--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-#root {
+body {
+  background: #000;
   font: 1em Roboto, sans-serif;
 }
 
@@ -7,30 +8,79 @@
   align-items: center;
   justify-content: center;
   min-height: 98vh;
-  background: radial-gradient(circle at center, #000000 50%, #ffffff 200%);
+  animation: fadeIn 0.5s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    scale: 0.1;
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .game-selector {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 2rem;
+}
+
+.game-selector-buttons {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  margin-right: 2rem;
 }
 
 .game-selector-button {
   font-size: 1.5rem;
-  cursor: pointer;
   margin: 1rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: none;
   background-color: #333;
-  color: #fff;  
+  color: #fff;
+  transition: background-color 0.3s ease, font-size 0.3s ease;
 }
 
 .game-selector-button:hover {
   background-color: #444;
   font-size: 2rem;
-  transition: background-color 0.3s ease;
-  transition: font-size 0.3s ease;
+}
+
+.summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #dedede;
+  width: 400px;
+}
+
+.summary-image {
+  height: 300px;
+  border-radius: 0.5rem;
+}
+
+.summary-button-play {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #30d751a4;
+  color: #fff;
+  transition: background-color 0.3s ease, font-size 0.3s ease;
+}
+
+.summary-button-play:hover {
+  background-color: #30d751;
+  font-size: 2rem;
 }
