--- a/src/games/multi-player/MultiPlayer.css
+++ b/src/games/multi-player/MultiPlayer.css
@@ -1,5 +1,5 @@
 .mp-game-container {
-    width: 100%;
+    width: 75%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -8,6 +8,12 @@
   }
   
 .mp-game {
+  width: 100%;
+  height: 98vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .mp-game-title {
@@ -16,8 +22,11 @@
   font-size: 2.5rem;
 }
 
-.mp-question-category {
-
+.answer-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin-bottom: 2rem;
 }
 
 .answer-button {
@@ -31,10 +40,20 @@
   transition: background-color 0.3s ease;
   display: block;
   margin: 0 auto;
+  width: 45%;
+  margin: 0 2%;
 }
 
 .answer-button:hover {
   background-color: #2980b9;
+}
+
+.answer-button.selected {
+  background-color: #2ecc71;
+}
+
+.answer-button:disabled.selected {
+  background-color: #2ecc71;
 }
 
 .messages-list {
@@ -70,6 +89,25 @@
   margin-bottom: 3px;
 }
 
-#waiting {
-  color: wheat;
+.answer-button:disabled {
+  background-color: #bdc3c7; /* Color de fondo para botones deshabilitados */
+  cursor: not-allowed; /* Cambia el cursor para indicar que está deshabilitado */
+  opacity: 0.6; /* Reduce la opacidad para mayor claridad */
+}
+
+/* Estilo moderno para el botón de enviar */
+.send-button {
+  background-color: #e74c3c; /* Color de fondo moderno */
+  color: white;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease; /* Añadir transición para el efecto de pulsación */
+}
+
+.send-button:hover {
+  background-color: #c0392b; /* Color al pasar el mouse */
+  transform: scale(1.05); /* Efecto de pulsación */
 }
